Introduce AggregateStrategy